# Hackett

./: .gitignore  README.md
Foundation/HPaxos/: Acceptor.h  CMakeLists.txt  Proposer.h
HFrame/: CMakeLists.txt  MakeVS64.bat
HFrame/Build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HFrame.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HFrame/Build_x64/HBase/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  HBase.sln  HBase.vcxproj  HBase.vcxproj.filters  cmake_install.cmake
HFrame/Build_x64/HExample/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assets.vcxproj  Assets.vcxproj.filters  Audio.vcxproj  Audio.vcxproj.filters  DSP.vcxproj  DSP.vcxproj.filters  DemoRunner.vcxproj  DemoRunner.vcxproj.filters  GUI.vcxproj  GUI.vcxproj.filters  HExample.sln  Plugins.vcxproj  Plugins.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters  cmake_install.cmake
HFrame/Build_x64/HExtras/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AudioPerformanceTest.vcxproj  AudioPerformanceTest.vcxproj.filters  AudioPluginHost.vcxproj  AudioPluginHost.vcxproj.filters  BLOCKS.vcxproj  BLOCKS.vcxproj.filters  BinaryBuilder.vcxproj  BinaryBuilder.vcxproj.filters  HExtras.sln  NetworkGraphicsDemo.vcxproj  NetworkGraphicsDemo.vcxproj.filters  Projector.vcxproj  Projector.vcxproj.filters  UnitTestRunner.vcxproj  UnitTestRunner.vcxproj.filters  WindowsDLL.vcxproj  WindowsDLL.vcxproj.filters  cmake_install.cmake
HFrame/Build_x64/HModule/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  HModule.sln  analytics.vcxproj  analytics.vcxproj.filters  audio_basics.vcxproj  audio_basics.vcxproj.filters  audio_devices.vcxproj  audio_devices.vcxproj.filters  audio_formats.vcxproj  audio_formats.vcxproj.filters  audio_plugin_client.vcxproj  audio_plugin_client.vcxproj.filters  audio_processors.vcxproj  audio_processors.vcxproj.filters  audio_utils.vcxproj  audio_utils.vcxproj.filters  blocks_basics.vcxproj  blocks_basics.vcxproj.filters  box2d.vcxproj  box2d.vcxproj.filters  cmake_install.cmake  cryptography.vcxproj  cryptography.vcxproj.filters  data_structures.vcxproj  data_structures.vcxproj.filters  dsp.vcxproj  dsp.vcxproj.filters  events.vcxproj  events.vcxproj.filters  graphics.vcxproj  graphics.vcxproj.filters  gui_basics.vcxproj  gui_basics.vcxproj.filters  gui_extra.vcxproj  gui_extra.vcxproj.filters  opengl.vcxproj  opengl.vcxproj.filters  osc.vcxproj  osc.vcxproj.filters  (+4 more)
HFrame/Build_x64/HTest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  HBaseTest.sln  HBaseTest.vcxproj  HFrameTest.vcxproj  HFrameTest.vcxproj.filters  HFrameUnitTest.vcxproj  HFrameUnitTest.vcxproj.filters  cmake_install.cmake
HFrame/Core/: CMakeLists.txt
HFrame/Extras/: CMakeLists.txt
HFrame/HBase/: CMakeLists.txt  HBase.cpp  HBase.h  HBase.mm
HFrame/HBase/containers/: AbstractFifo.cpp  AbstractFifo.h  Array.h  ArrayAllocationBase.h  ArrayBase.cpp  ArrayBase.h  DynamicObject.cpp  DynamicObject.h  ElementComparator.h  HashMap.h  HashMap_test.cpp  LinkedListPointer.h  ListenerList.h  NamedValueSet.cpp  NamedValueSet.h  OwnedArray.cpp  OwnedArray.h  PropertySet.cpp  PropertySet.h  ReferenceCountedArray.cpp  ReferenceCountedArray.h  ScopedValueSetter.h  SortedSet.h  SparseSet.cpp  SparseSet.h  Variant.cpp  Variant.h
HFrame/HBase/files/: DirectoryIterator.cpp  DirectoryIterator.h  File.cpp  File.h  FileFilter.cpp  FileFilter.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  FileSearchPath.cpp  FileSearchPath.h  MemoryMappedFile.h  TemporaryFile.cpp  TemporaryFile.h  WildcardFileFilter.cpp  WildcardFileFilter.h
HFrame/HBase/javascript/: JSON.cpp  JSON.h  Javascript.cpp  Javascript.h
HFrame/HBase/logging/: FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h
HFrame/HBase/maths/: BigInteger.cpp  BigInteger.h  Expression.cpp  Expression.h  MathsFunctions.h  NormalisableRange.h  Random.cpp  Random.h  Range.h  StatisticsAccumulator.h
HFrame/HBase/memory/: Atomic.h  ByteOrder.h  ContainerDeletePolicy.h  HeapBlock.h  HeavyweightLeakedObjectDetector.h  LeakedObjectDetector.h  Memory.h  MemoryBlock.cpp  MemoryBlock.h  OptionalScopedPointer.h  ReferenceCountedObject.h  ScopedPointer.h  SharedResourcePointer.h  Singleton.h  WeakReference.h
HFrame/HBase/misc/: ConsoleApplication.cpp  ConsoleApplication.h  Result.cpp  Result.h  RuntimePermissions.cpp  RuntimePermissions.h  StdFunctionCompat.cpp  StdFunctionCompat.h  Uuid.cpp  Uuid.h  WindowsRegistry.h
HFrame/HBase/native/: BasicNativeHeaders.h  android_Files.cpp  android_JNIHelpers.cpp  android_JNIHelpers.h  android_Misc.cpp  android_Network.cpp  android_RuntimePermissions.cpp  android_SystemStats.cpp  android_Threads.cpp  curl_Network.cpp  linux_CommonFile.cpp  linux_Files.cpp  linux_Network.cpp  linux_SystemStats.cpp  linux_Threads.cpp  mac_ClangBugWorkaround.h  mac_Files.mm  mac_Network.mm  mac_Strings.mm  mac_SystemStats.mm  mac_Threads.mm  osx_ObjCHelpers.h  posix_IPAddress.h  posix_NamedPipe.cpp  posix_SharedCode.h  win32_ComSmartPtr.h  win32_Files.cpp  win32_Network.cpp  win32_Registry.cpp  win32_SystemStats.cpp  win32_Threads.cpp
HFrame/HBase/network/: IPAddress.cpp  IPAddress.h  MACAddress.cpp  MACAddress.h  NamedPipe.cpp  NamedPipe.h  Socket.cpp  Socket.h  URL.cpp  URL.h  WebInputStream.cpp  WebInputStream.h
HFrame/HBase/streams/: BufferedInputStream.cpp  BufferedInputStream.h  FileInputSource.cpp  FileInputSource.h  InputSource.h  InputStream.cpp  InputStream.h  MemoryInputStream.cpp  MemoryInputStream.h  MemoryOutputStream.cpp  MemoryOutputStream.h  OutputStream.cpp  OutputStream.h  SubregionStream.cpp  SubregionStream.h  URLInputSource.cpp  URLInputSource.h
HFrame/HBase/system/: CompilerSupport.h  PlatformDefs.h  StandardHeader.h  SystemStats.cpp  SystemStats.h  (+1 more)
HFrame/HExample/: CMakeLists.txt
HFrame/HModule/: CMakeLists.txt  JUCE Module Format.txt
HFrame/HPaxos/: HPaxos.cpp  HPaxos.h  Learner.h
HFrame/HTest/: CMakeLists.txt  HBaseTest.cpp  HBaseUnitTestMain.cpp
HFrame/Source/: CMakeLists.txt
Project/AutoQ/: CMakeLists.txt  CMakeShared.txt  README.md  待完成工作.txt
(+2469 files in other folders)
