CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE("$ENV{CMAKE_CONFIG}/CMakeDefine.inc")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

#解决方案
PROJECT (AltQSolution)

INCLUDE("$ENV{CMAKE_CONFIG}/CMakeProject.inc")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib/${CMAKE_STANDARD_OUT_SUFFIX})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib/${CMAKE_STANDARD_OUT_SUFFIX})

# 禁止某些警告
add_compile_options(/wd4996 /wd4018 /wd4267 /wd4251)

#添加子工程

#基础模块
ADD_SUBDIRECTORY(AltQCore)
ADD_SUBDIRECTORY(AltQBase)
ADD_SUBDIRECTORY(AltQApp)

#扩展模块
ADD_SUBDIRECTORY(AltQModules/AltQModuleFile)
ADD_SUBDIRECTORY(AltQModules/AltQModuleFileUI)
ADD_SUBDIRECTORY(AltQModules/AltQModuleRadio)
ADD_SUBDIRECTORY(AltQModules/AltQModuleRadioUI)
