FILE(GLOB_RECURSE SRC "./*.*")
FILE(GLOB_RECURSE NATIVE "./native/*.*")
FILE(GLOB_RECURSE RESOURCES "./resources/*.*")
FILE(GLOB_RECURSE INTERFACE "../AltQInterface/*.h")

INCLUDE_DIRECTORIES(../AltQBase)
INCLUDE_DIRECTORIES(../AltQInterface)

ADD_DEFINITIONS(-DJUCE_DLL)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ADD_EXECUTABLE(AltQ WIN32 ${SRC} ${NATIVE} ${RESOURCES} ${INTERFACE})
TARGET_LINK_LIBRARIES(AltQ AltQBase AltQModuleFileUI)

SOURCE_GROUP("native" FILES ${NATIVE})
SOURCE_GROUP("resources" FILES ${RESOURCES})
SOURCE_GROUP("AltQInterface" FILES ${INTERFACE})