INCLUDE("../../CMakeShared.txt")
FILE(GLOB_RECURSE SRC "./*.*")
FILE(GLOB_RECURSE Interface "../../AltQInterface/*.h")

ADD_DEFINITIONS(-DALTQLIB)

ADD_ALTQ_INCLUDE()
ADD_ALTQ_LINKPATH()
INCLUDE_DIRECTORIES(../../AltQInterface)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib/${CMAKE_STANDARD_OUT_SUFFIX})
ADD_LIBRARY(AltQModuleFile SHARED ${SRC} ${Interface})
ADD_ALTQ_LINKLIB(AltQModuleFile)

SOURCE_GROUP("AltQInterface" FILES ${Interface})
SET_TARGET_PROPERTIES(AltQModuleFile PROPERTIES FOLDER AltQModules)