FILE(GLOB_RECURSE SRC "*.h" "*.cpp")
FILE(GLOB_RECURSE Interface "../../AltQInterface/*.h")

ADD_DEFINITIONS(-DALTQLIB)

INCLUDE_DIRECTORIES(../../AltQBase)
INCLUDE_DIRECTORIES(../../AltQInterface)

ADD_DEFINITIONS(-DJUCE_DLL)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)

ADD_LIBRARY(AltQModuleRadioUI SHARED ${SRC} ${Interface})
SOURCE_GROUP("AltQInterface" FILES ${Interface})

SET_TARGET_PROPERTIES(AltQModuleRadioUI PROPERTIES FOLDER AltQModules)
TARGET_LINK_LIBRARIES(AltQModuleRadioUI AltQBase)

